// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`next > should lint 'nextjs/google-font-display' 1`] = `
[
  {
    "column": 13,
    "line": 8,
    "message": "Custom fonts not added in \`pages/_document.js\` will only load for a single page. This is discouraged.",
    "rule": "next(no-page-custom-font)",
    "severity": "warning",
  },
  {
    "column": 14,
    "line": 8,
    "message": "A font-display parameter is missing (adding \`&display=optional\` is recommended).",
    "rule": "next(google-font-display)",
    "severity": "error",
  },
]
`;

exports[`next > should lint 'nextjs/google-font-preconnect' 1`] = `[]`;

exports[`next > should lint 'nextjs/inline-script-id' 1`] = `[]`;

exports[`next > should lint 'nextjs/next-script-for-ga' 1`] = `[]`;

exports[`next > should lint 'nextjs/no-assign-module-variable' 1`] = `[]`;

exports[`next > should lint 'nextjs/no-async-client-component' 1`] = `[]`;

exports[`next > should lint 'nextjs/no-before-interactive-script-o…' 1`] = `
[
  {
    "column": 9,
    "line": 11,
    "message": "next/script's \`beforeInteractive\` strategy should not be used outside of \`pages/_document.js\`",
    "rule": "next(no-before-interactive-script-outside-document)",
    "severity": "error",
  },
]
`;

exports[`next > should lint 'nextjs/no-css-tags' 1`] = `[]`;

exports[`next > should lint 'nextjs/no-document-import-in-page' 1`] = `
[
  {
    "column": 1,
    "line": 4,
    "message": "\`<Document />\` from \`next/document\` should not be imported outside of \`pages/_document.js\`. See: https://nextjs.org/docs/messages/no-document-import-in-page",
    "rule": "next(no-document-import-in-page)",
    "severity": "error",
  },
]
`;

exports[`next > should lint 'nextjs/no-duplicate-head' 1`] = `
[
  {
    "column": 1,
    "line": 3,
    "message": "\`<Document />\` from \`next/document\` should not be imported outside of \`pages/_document.js\`. See: https://nextjs.org/docs/messages/no-document-import-in-page",
    "rule": "next(no-document-import-in-page)",
    "severity": "error",
  },
  {
    "column": 10,
    "line": 10,
    "message": "Do not include multiple instances of \`<Head/>\`",
    "rule": "next(no-duplicate-head)",
    "severity": "error",
  },
]
`;

exports[`next > should lint 'nextjs/no-head-element' 1`] = `
[
  {
    "column": 7,
    "line": 6,
    "message": "Do not use \`<head>\` element. Use \`<Head />\` from \`next/head\` instead.",
    "rule": "next(no-head-element)",
    "severity": "error",
  },
]
`;

exports[`next > should lint 'nextjs/no-head-import-in-document' 1`] = `
[
  {
    "column": 1,
    "line": 3,
    "message": "\`<Document />\` from \`next/document\` should not be imported outside of \`pages/_document.js\`. See: https://nextjs.org/docs/messages/no-document-import-in-page",
    "rule": "next(no-document-import-in-page)",
    "severity": "error",
  },
]
`;

exports[`next > should lint 'nextjs/no-html-link-for-pages' 1`] = `
[
  {
    "column": 7,
    "line": 6,
    "message": "Do not use \`<a>\` elements to navigate between Next.js pages.",
    "rule": "next(no-html-link-for-pages)",
    "severity": "warning",
  },
  {
    "column": 7,
    "line": 7,
    "message": "Do not use \`<a>\` elements to navigate between Next.js pages.",
    "rule": "next(no-html-link-for-pages)",
    "severity": "warning",
  },
]
`;

exports[`next > should lint 'nextjs/no-page-custom-font' 1`] = `
[
  {
    "column": 7,
    "line": 8,
    "message": "Custom fonts not added in \`pages/_document.js\` will only load for a single page. This is discouraged.",
    "rule": "next(no-page-custom-font)",
    "severity": "warning",
  },
]
`;

exports[`next > should lint 'nextjs/no-script-component-in-head' 1`] = `
[
  {
    "column": 6,
    "line": 8,
    "message": "Prevent usage of \`next/script\` in \`next/head\` component.",
    "rule": "next(no-script-component-in-head)",
    "severity": "error",
  },
]
`;

exports[`next > should lint 'nextjs/no-styled-jsx-in-document' 1`] = `[]`;

exports[`next > should lint 'nextjs/no-sync-scripts' 1`] = `[]`;

exports[`next > should lint 'nextjs/no-title-in-document-head' 1`] = `[]`;

exports[`next > should lint 'nextjs/no-typos' 1`] = `[]`;

exports[`next > should lint 'nextjs/no-unwanted-polyfillio' 1`] = `[]`;
